<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CookEase</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="cookease">CookEase</string>
    <string name="slogan">Water you listening to?</string>
    <string name="home">Home</string>
    <string name="analytics">Analytics</string>
    <string name="settings">Settings</string>
    <string name="title_activity_analytics">AnalyticsActivity</string>
    <string name="ok">OK</string>
    <string name="notifications">Notifications</string>
    <string name="instruction">Tap to listen for events:</string>
    <string name="title_activity_notifications">NotificationsActivity</string>
    <string name="notify_slogan">How should we notify you?</string>
    <string name="analytics_slogan">Cooking Analytics</string>
    <string name="notify_instruction">Notify via:</string>
    <string name="analytics_instruction">Currently viewing:</string>
    <string name="analytics_format">Last 5 sessions:</string>
    <string name="title_activity_tab">TabActivity</string>
    <string name="last_5_sessions">Last 5 sessions</string>
    <string name="Graph_by_Month">Graph by Month</string>
    

</resources>