<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/bg_blur"
    tools:context=".AnalyticsActivity" >
    
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="160dp"
        android:text="@string/analytics"
        android:textSize="46sp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#f5f5f5" 
        android:fontFamily ="sans-serif"/>
    
    
        <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textColor="#f5f5f5"
        android:text="@string/analytics_slogan"
        android:textSize="21sp"
        android:textStyle="italic"
        android:textAppearance="?android:attr/textAppearanceLarge" />
        
    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="38dp"
        android:textColor="#f5f5f5"
        android:text="@string/home"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView3"
        android:layout_alignBottom="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:textColor="#f5f5f5"
        android:text="@string/notifications"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView4"
        android:layout_alignParentRight="true"
        android:layout_marginRight="39dp"
        android:textColor="#3C94D3"
        android:text="@string/analytics"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="500dp"
        android:layout_height="225dp"
        android:layout_above="@+id/textView3"
        android:layout_marginBottom="75dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ex_analytics" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView7"
            android:layout_alignBottom="@+id/textView7"
            android:layout_marginRight="18dp"
            android:layout_toLeftOf="@+id/textView7"
            android:text="@string/analytics_instruction"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#575757" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/imageView1"
            android:layout_marginBottom="12dp"
            android:layout_toLeftOf="@+id/textView5"
            android:text="@string/analytics_format"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#FFAA3C" />

</RelativeLayout>
