<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/clock_y"
    tools:context=".NotificationsActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearlayout1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:fontFamily="sans-serif"
        android:text="@string/notifications"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#000000"
        android:textSize="55sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:text="@string/notify_slogan"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#000000"
        android:textSize="21sp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/notify_instruction"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#000000" />

    <ListView
        android:id="@+id/listView2"
        android:layout_width="450dp"
        android:layout_height="145dp"
        android:layout_below="@+id/textView6"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="20dp"
        android:background="@android:color/transparent"
        android:textColor="#000000" >
    </ListView>

</RelativeLayout>